clang/test/BSC/Negative/Method/BuiltInType/int_conflict_return_type/int_conflict_return_type.cbs
// RUN: %clang_cc1 -verify %s

double int::increase(int* this); // expected-note {{previous declaration is here}}
void int::increase(int* this) { // expected-error {{conflicting types for 'increase'}}
    *this = *this +1;
}